sync S3 on each commit

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "publish": "next build && next export"
   },
   "dependencies": {
     "js-cookie": "^3.0.1",
