add parent variable to CI

--- a/env.sample
+++ b/env.sample
@@ -2,3 +2,4 @@ WATCHPACK_POLLING=true
 
 NEXT_PUBLIC_TWITCH_CLIENT_ID=
 NEXT_PUBLIC_TWITCH_REDIRECT_URL=http://localhost:3000
+NEXT_PUBLIC_TWITCH_PARENT=localhost
