--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,7 @@ jobs:
       env:
         NEXT_PUBLIC_TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
         NEXT_PUBLIC_TWITCH_REDIRECT_URL: ${{ secrets.TWITCH_REDIRECT_URL }}
+        NEXT_PUBLIC_TWITCH_PARENT: youtwitch.allocsoc.net
       run: |
         npm install
         npm run publish
