--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
         NEXT_PUBLIC_TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
         NEXT_PUBLIC_TWITCH_REDIRECT_URL: ${{ secrets.TWITCH_REDIRECT_URL }}
         NEXT_PUBLIC_TWITCH_PARENT: youtwitch.allocsoc.net
+        NEXT_PUBLIC_RECOMMEND_BASE: https://youtwitch-api.allocsoc.net
       run: |
         npm install
         npm run publish
