--- a/env.sample
+++ b/env.sample
@@ -3,3 +3,4 @@ WATCHPACK_POLLING=true
 NEXT_PUBLIC_TWITCH_CLIENT_ID=
 NEXT_PUBLIC_TWITCH_REDIRECT_URL=http://localhost:3000
 NEXT_PUBLIC_TWITCH_PARENT=localhost
+NEXT_PUBLIC_RECOMMEND_BASE=http://localhost:8080
